# ChangeLog for genkernel
# Copyright 1999-2008 Gentoo Foundation; 2008 Chris Gianelloni, Andrew Gaffney
# Distributed under the GPL v2

  04 Dec 2008; Chris Gianelloni <wolf31o2@wolf31o2.org> genkernel:
  Bumping version for release.

  25 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> netboot/linuxrc.x:
  Use symlinks for busybox utils Use full path to mount since it gets grumpy
  without it in later bb versions for some reason

  17 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> gen_initramfs.sh:
  Break apart cryptsetup stuff into separate append_luks() and make
  append_auxillary() dependent on ${BUSYBOX} for gentoo bug #247052

  15 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> defaults/linuxrc:
  Applied patch for UUID support for real_resume= from gentoo bug #239687

  15 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> gen_determineargs.sh:
  Added modified version of patch from gentoo bug #238707

  14 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> gen_initramfs.sh:
  Only append unionfs_fuse stuff if UNIONFS is set

  14 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> defaults/linuxrc,
  gen_cmdline.sh, gen_determineargs.sh, genkernel:
  Add --unionfs commandline option to enable building of unionfs-fuse Add
  nounionfs boot option

  14 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> defaults/initrd.scripts:
  Add good_msg for creating the union mount

  14 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> defaults/initrd.scripts:
  Pipe stderr for unionfs mount call to /dev/null to supress getcwd message

  14 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> defaults/initrd.scripts,
  defaults/linuxrc:
  Call switch_root with full path

  14 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> defaults/linuxrc:
  Call switch_root with 'env -i' to clean out the kernel-defined key/value
  pairs

  14 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> defaults/linuxrc:
  Skip good_root check for /dev/nfs for gentoo bug #246759
