@@ -91,6 +91,7 @@ longusage() {
   echo "				--> 'emerge cryptsetup-luks' with USE=-dynamic"
   echo "    --no-busybox    Do not include busybox in the initramfs."
   echo "    --unionfs       Include support for unionfs"
+  echo "    --netboot		Create a self-contained env in the initramfs"
   echo "  Internals"
   echo "	--arch-override=<arch>	Force to arch instead of autodetect"
   echo "	--cachedir=<dir>	Override the default cache location"
@@ -248,6 +249,10 @@ parse_cmdline() {
 		--unionfs)
 			CMD_UNIONFS=1
 			print_info 2 "CMD_UNIONFS: ${CMD_UNIONFS}"
+			;;
+		--netboot)
+			CMD_NETBOOT=1
+			print_info 2 "CMD_NETBOOT: ${CMD_NETBOOT}"
 			;;
 		--slowusb)
 			CMD_SLOWUSB=1
