@@ -2,6 +2,11 @@
 # Copyright 1999-2008 Gentoo Foundation; 2008 Chris Gianelloni, Andrew Gaffney
 # Distributed under the GPL v2
 
+  07 Dec 2008; Andrew Gaffney <agaffney@gentoo.org> defaults/udhcpc.scripts,
+  gen_cmdline.sh, gen_determineargs.sh, netboot/linuxrc.x:
+  Initial support for --netboot option integrate functionality from netboot
+  udhcpc.scripts into default one
+
   04 Dec 2008; Chris Gianelloni <wolf31o2@wolf31o2.org> genkernel:
   Bumping version for release.
 
